# django_teor

./: Makefile  README.md  pyproject.toml
django_example/django_example/: settings.py  urls.py
django_example/riddles/: apps.py  models.py  urls.py  views.py
django_example/riddles/migrations/: 0001_initial.py
django_example/riddles/static/: main.css
django_example/riddles/templates/: answer.html  index.html
