[tool.poetry]
name = "django-teor"
version = "0.1.0"
description = ""
authors = ["Kazakov Kostya <leap74rus@gmail.com>"]
readme = "README.md"
packages = [{include = "django_teor"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
black = "^23.3.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
